--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 <body>
     <div id="header-placeholder"></div>
     
-    <main>
+    <main style="display: flex; flex-direction: column; align-items: center; text-align: center;">
         <img src="icons/img1.jpg" alt="Shubham Khaitan" style="width: 300px; height: auto;">
         <br>
-        <p>Discipline is Everything</p>
+        <p style="margin-top: 10px;">"Discipline is Everything"</p>
     </main>
+    
 
     <div id="footer-placeholder"></div>
 
