--- a/about.html
+++ b/about.html
@@ -12,9 +12,7 @@
     
     <main>
         <h2>Who I Am</h2>
-        <p>We are a passionate team dedicated to creating amazing websites.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec ex vitae elit condimentum blandit nec at felis.</p>
-        <p>Integer sed urna quis arcu vehicula malesuada non nec nisi. Phasellus lobortis lectus a justo interdum, nec suscipit nunc fermentum.</p>
+        <p>I am a Finance professional.</p>
     </main>
 
     <div id="footer-placeholder"></div>
