--- a/programs.html
+++ b/programs.html
@@ -10,11 +10,12 @@
 <body>
     <div id="header-placeholder"></div>
     
-    <main>
-        <h2>Who I Am</h2>
-        <p>We are a passionate team dedicated to creating amazing websites.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam nec ex vitae elit condimentum blandit nec at felis.</p>
-        <p>Integer sed urna quis arcu vehicula malesuada non nec nisi. Phasellus lobortis lectus a justo interdum, nec suscipit nunc fermentum.</p>
+    <main style="display: flex; flex-direction: column; align-items: center; text-align: center;">
+        <h2>Programs</h2>
+        <br>
+        <img src="icons/construction.gif" alt="Under Construction" style="width: 300px; height: auto;">
+        <br>
+        <p style="margin-top: 10px;">Watch this space for something exciting</>
     </main>
 
     <div id="footer-placeholder"></div>
