--- a/blog.html
+++ b/blog.html
@@ -15,8 +15,8 @@
     <main id="main-content">
         <h1>Blog</h1>
         <ul id="blog-posts-list">
-            <li><a href="/blog-posts/blog1">Blog Post 1</a></li>
-            <li><a href="/blog-posts/blog2">Blog Post 2</a></li>
+            <li><a href="blog-posts/blog1">Blog Post 1</a></li>
+            <li><a href="blog-posts/blog2">Blog Post 2</a></li>
             <!-- Add more links for other blog posts -->
         </ul>
     </main>
