--- a/programs.html
+++ b/programs.html
@@ -15,7 +15,7 @@
         <br>
         <img src="icons/construction.gif" alt="Under Construction" style="width: 500px; height: auto;">
         <br>
-        <p style="margin-top: 10px;">Watch this space for something exciting</>
+        <p style="margin-top: 10px;">Watch this space for something exciting!</>
     </main>
 
     <div id="footer-placeholder"></div>
