--- a/blog-posts/blog1.html
+++ b/blog-posts/blog1.html
@@ -25,6 +25,6 @@
     <div id="footer-placeholder"></div>
 
     <!-- Load header and footer using JavaScript -->
-    <script src="../js/include.js"></script>
+    <script src="../js/include-blogs.js"></script>
 </body>
 </html>
