--- a/blog-posts/blog2.html
+++ b/blog-posts/blog2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Post 2</title>
     <link rel="stylesheet" href="../css/styles.css">
+    <div id="favicon-placeholder"></div>
 </head>
 <body>
     <!-- Include header -->
@@ -24,6 +25,6 @@
     <div id="footer-placeholder"></div>
 
     <!-- Load header and footer using JavaScript -->
-    <script src="../js/include.js"></script>
+    <script src="../js/include-blogs.js"></script>
 </body>
 </html>
