--- a/blog-posts/blog1.html
+++ b/blog-posts/blog1.html
@@ -16,6 +16,7 @@
         <article>
             <h1>Blog Post 1: My First Blog Post</h1>
             <p>Published on: January 1, 2024</p>
+            <br>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed accumsan auctor odio, eu vehicula nunc luctus et. Morbi vel velit ut eros auctor lacinia. Proin sit amet nisl eu justo rutrum congue. Integer nec libero at velit consectetur facilisis ut nec sem. Sed tempus turpis vel fermentum finibus. Donec vehicula nunc eu interdum dignissim. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tempor nulla ac tortor blandit, sit amet convallis felis sodales. Fusce aliquet fringilla est, nec tristique lorem convallis eu.</p>
             <p>Nulla sollicitudin mi vitae convallis efficitur. Vivamus aliquet lobortis elit, a tincidunt tortor fringilla nec. Mauris commodo tincidunt odio vitae mattis. Nam tristique odio sit amet lacinia volutpat. Morbi ac urna et nulla vestibulum aliquet. Duis in eleifend dui, sed facilisis lectus. Duis tincidunt varius dapibus. Pellentesque vel tellus id sapien tristique lobortis.</p>
         </article>
@@ -25,6 +26,6 @@
     <div id="footer-placeholder"></div>
 
     <!-- Load header and footer using JavaScript -->
-    <script src="../js/include-blogs.js"></script>
+    <script src="../js/include.js"></script>
 </body>
 </html>
