--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main style="display: flex; flex-direction: column; align-items: center; text-align: center;">
         <img src="icons/img1.jpg" alt="Shubham Khaitan" style="width: 300px; height: auto;">
         <br>
-        <h3 style="margin-top: 10px;">"Discipline is Everything. Then comes Focus, Patience, and Resilience"</h3>
+        <h3 style="margin-top: 10px;">"Discipline is Everything.<br>Then comes Focus, Patience, and Resilience"</h3>
     </main>
     
 
