--- a/about.html
+++ b/about.html
@@ -38,6 +38,10 @@
         <p>
             I am currently learning about Treasury & Corporate Finance to allow me to apply my practical and theoretical knowledge to add value to stakeholders - both internal and external - and to further develop my soft & technical skills. I'm keen on contributing to my organisation's success through strategic cash, risk, & FX management.
         </p>
+        <br>
+        <p>
+            In my free time, I try to help budding finance professionals sitting for the FRM & CFA exams with their preparation via my Youtube channel.
+        </p>
     </main>
 
     <div id="footer-placeholder"></div>
