--- a/blog.html
+++ b/blog.html
@@ -16,9 +16,9 @@
         <h2>Blog</h2>
         <br>
         <ul id="blog-posts-list">
-            <li><a href="blog-posts/blog1">Blog Post 1</a></li>
+            <!-- <li><a href="blog-posts/blog1">Blog Post 1</a></li>
             <br>
-            <li><a href="blog-posts/blog2">Blog Post 2</a></li>
+            <li><a href="blog-posts/blog2">Blog Post 2</a></li> -->
             <!-- Add more links for other blog posts -->
         </ul>
     </main>
