--- a/404.html
+++ b/404.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>404 Page Not Found</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <div id="favicon-placeholder"></div>
 </head>
 <body>
-    <h1>404 Page Not Found</h1>
-    <p>The requested page does not exist.</p>
+    <div id="header-placeholder"></div>
+    
+    <main style="display: flex; flex-direction: column; align-items: center; text-align: center;">
+        <h1>404 Page Not Found</h1>
+        <p>The requested page does not exist. Please check the address and give it another go.</p>
+    </main>
+    
+
+    <div id="footer-placeholder"></div>
+
+    <script src="js/include.js"></script>
 </body>
 </html>
