--- a/404.html
+++ b/404.html
@@ -10,9 +10,10 @@
 <body>
     <div id="header-placeholder"></div>
     
-    <main style="display: flex; flex-direction: column; align-items: center; text-align: center;">
+    <main>
         <h1>404 Page Not Found</h1>
-        <p>The requested page does not exist. Please check the address and give it another go.</p>
+        <br>
+        <p>The requested page does not exist.<br>Please check the address and give it another go.</p>
     </main>
     
 
