--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
             Treasury Analyst starting my journey at AstraZeneca, a FTSE10 company. Demonstrated expertise in financial modelling and data analysis as a PwC Associate, at a Proprietary Trading firm, and at Europe’s largest student-run investment fund. UCL First Class Statistics Graduate, Certified FRM, and a CFA Level 3 candidate.
         </h4>
         <p>
-            I have recently joined AstraZeneca in their Group Treasury team.
+            I have recently joined AstraZeneca in their Group Treasury Front Office team.
         </p>
         <br>
         <p>
